Extract standardize and random_transform into separate top level functions. Call process pool with workers that go through the pipeline steps.

--- a/CIFAR10 Benchmark.ipynb
+++ b/CIFAR10 Benchmark.ipynb
@@ -34,8 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 64 ms, sys: 72 ms, total: 136 ms\n",
-      "Wall time: 135 ms\n"
+      "CPU times: user 84 ms, sys: 44 ms, total: 128 ms\n",
+      "Wall time: 125 ms\n"
      ]
     }
    ],
@@ -66,19 +66,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from multiprocessing import Pool\n",
+    "\n",
+    "pool = Pool(processes=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pool.terminate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.52 s, sys: 8 ms, total: 6.52 s\n",
+      "Wall time: 6.51 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "#from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
     "import tools.image as T\n",
     "\n",
     "# Useful for checking the output of the generators after code change\n",
     "#from importlib import reload\n",
-    "#reload(T)\n",
+    "reload(T)\n",
     "\n",
     "gen = T.ImageDataGenerator(\n",
     "     featurewise_center=False,\n",
@@ -90,15 +124,17 @@
     "     width_shift_range=.1,\n",
     "     height_shift_range=.1,\n",
     "     shear_range=0.,\n",
-    "     zoom_range=[.9, 1],\n",
-    "     channel_shift_range=20,\n",
+    "     zoom_range=0,\n",
+    "     channel_shift_range=0,\n",
     "     fill_mode='nearest',\n",
     "     cval=0.,\n",
     "     horizontal_flip=True,\n",
     "     vertical_flip=False,\n",
     "     rescale=None,\n",
-    "     preprocessing_function=preprocess_img,\n",
-    "     dim_ordering='default')\n",
+    "#      preprocessing_function=preprocess_img,\n",
+    "     dim_ordering='default',\n",
+    "     pool=pool\n",
+    ")\n",
     "test_gen = T.ImageDataGenerator(\n",
     "    preprocessing_function=preprocess_img)\n",
     "\n",
@@ -112,7 +148,11 @@
     "#         for j in range(6):\n",
     "#             if i*6 + j < 32:\n",
     "#                 ax[i][j].imshow(imgs[i*6 + j])\n",
-    "#     break"
+    "#     break\n",
+    "\n",
+    "for i, (imgs, labels) in enumerate(X_train_aug):\n",
+    "    if i == 1000:\n",
+    "        break"
    ]
   },
   {
